# resource_dasm

./: .editorconfig  .gitignore  AmbrosiaSprites.cc  AmbrosiaSprites.hh  AudioCodecs.cc  AudioCodecs.hh  CMakeLists.txt  Image.cc  Image.hh  ImageTextFont.hh  InterruptManager.hh  LICENSE  M68KEmulator.cc  M68KEmulator.hh  Makefile  MemoryContext.cc  MemoryContext.hh  PEFFFile.cc  PEFFFile.hh  PICTRenderer.cc  PICTRenderer.hh  PPC32Emulator.cc  PPC32Emulator.hh  QuickDrawEngine.cc  QuickDrawEngine.hh  QuickDrawFormats.cc  QuickDrawFormats.hh  README  README.md  RealmzLib.cc  RealmzLib.hh  ResourceFile.cc  ResourceFile.hh  SystemTemplates.cc  TODO  TODO.md  TrapInfo.cc  TrapInfo.hh  ambrosia_sprites.cc  ambrosia_sprites.hh  (+45 more)
.github/workflows/: cmake.yml
src/: AmbrosiaSprites.hh  AudioCodecs.cc  AudioCodecs.hh  BitmapFontRenderer.cc  BitmapFontRenderer.hh  Cli.cc  Cli.hh  Conversions.cc  Conversions.hh  DOLFile.cc  DOLFile.hh  ImageSaver.cc  ImageSaver.hh  IndexFormat.hh  InterruptManager.cc  InterruptManager.hh  Lookups.cc  Lookups.hh  LowMemoryGlobals.cc  LowMemoryGlobals.hh  M68KEmulator.cc  M68KEmulator.hh  MemoryContext.cc  MemoryContext.hh  PEFFFile.cc  PEFFFile.hh  PEFile.cc  PEFile.hh  PPC32Emulator.cc  PPC32Emulator.hh  QuickDrawEngine.cc  QuickDrawEngine.hh  QuickDrawFormats.cc  QuickDrawFormats.hh  RealmzGlobalData.cc  RealmzGlobalData.hh  RealmzLib.cc  RealmzLib.hh  RealmzSaveData.cc  RealmzSaveData.hh  (+58 more)
src/Audio/: AAFArchive.cc  AAFArchive.hh  Constants.cc  Constants.hh  Instrument.cc  Instrument.hh  MODSynthesizer.cc  MODSynthesizer.hh  SDLAudioStream.cc  SDLAudioStream.hh  SampleCache.hh  WAVFile.cc  WAVFile.hh  modsynth.cc  smsdumpbanks.cc  smssynth.cc
src/DataCodecs/: Bungie.cc  Codecs.hh  DinoParkTycoon-LZSS-RLE.cc  Flashback-LZSS.cc  MacSki-RUN4-COOK-CO2K.cc  PackBits.cc  Presage-LZSS.cc  SoundMusicSys-LZSS.cc
src/DataDecoders/: Decoders.hh  DinoParkTycoon-LZSS-RLE.cc  DinoParkTycoon-LZSS.cc  Flashback-LZSS.cc  MacSki-RUN4-COOK-CO2K.cc  SoundMusicSys-LZSS.cc
src/Decompressors/: System.cc  System.hh  System0.cc  System0.hh  System01.cc  System2.cc  System3.cc  System3.hh
src/Emulators/: EmulatorBase.cc  EmulatorBase.hh  Expression.cc  Expression.hh  InterruptManager.cc  InterruptManager.hh  M68KEmulator.cc  M68KEmulator.hh  MemoryContext.cc  MemoryContext.hh  PPC32Emulator.cc  PPC32Emulator.hh  SH4Emulator.cc  SH4Emulator.hh  X86Emulator.cc  X86Emulator.hh
src/ExecutableFormats/: DOLFile.cc  DOLFile.hh  ELFFile.cc  ELFFile.hh  GameCubeImages.hh  PEFFFile.cc  PEFFFile.hh  PEFFile.cc  PEFFile.hh  PEFile.cc  PEFile.hh  RELFile.cc  RELFile.hh  XBEFile.cc  XBEFile.hh
src/IndexFormats/: AppleSingle-AppleDouble.cc  CBag.cc  DCData.cc  DCData.hh  Directory.cc  Formats.hh  HIRF.cc  HIRF.hh  MacBinary.cc  Mohawk.cc  Mohawk.hh  ResourceFork.cc  ResourceFork.hh
src/ResourceDecompressors/: System.hh  System01.cc  System2.cc  System3.cc
src/SpriteDecoders/: Ambrosia-btSP-HrSp-SprD.cc  Ambrosia-btSP-HrSp-SprT.cc  Ambrosia-btSP-HrSp.cc  Blobbo-BTMP-PMP8.cc  Bungie-256.cc  DarkCastle-DC2.cc  DarkCastle-PPCT-PSCR.cc  Decoders.hh  DinoParkTycoon-BMap-XMap-XBig.cc  DinoParkTycoon-BMap.cc  Factory-1img-4img-8img.cc  Flashback-PPSS.cc  Greebles-GSIF.cc  Lemmings-PrinceOfPersia-SHPD.cc  Lemmings-SHPD.cc  MECC-Imag.cc  Odyssey-NPIC-SHPS.cc  Odyssey-SHPS.cc  Presage.cc  PrinceOfPersia2-SHAP.cc  SimCity2000-SPRT.cc  Spectre-shap.cc  StepOnIt-sssf.cc  SwampGas-PPic.cc  TheZone-Spri.cc
